Fix a crash when copy-pasting data between two different images

We shouldn't use makeCloneFromRough() on the devices that belong to
the nodes, because it resets the defaultBounds() link of the source.
Use KisPainter::copyAreaOptimized() instead.

BUG:394068